# wasm-interface-types

./: BINARY.md  Cargo.toml  README.md  SEMANTICS.md
.github/workflows/: main.yml
crates/parser/: Cargo.toml  README.md
crates/parser/src/: lib.rs
crates/printer/: Cargo.toml  README.md
crates/printer/examples/: wasm2wit.rs
crates/printer/src/: lib.rs
crates/schema-version/: Cargo.toml
crates/schema-version/src/: lib.rs
crates/test-helpers/: Cargo.toml
crates/test-helpers/src/: lib.rs
crates/text/: Cargo.toml  README.md
crates/text/examples/: wit2wasm.rs
crates/text/src/: binary.rs  lib.rs
crates/text/src/ast/: external.rs  func.rs  implement.rs  instr.rs  mod.rs  module.rs  ty.rs
crates/text/src/resolve/: expand.rs  mod.rs  names.rs  tyexpand.rs
crates/text/tests/: all.rs  parse-fail.rs  parse-pass.rs
crates/text/tests/parse-fail/: implement1.wit  implement1.wit.err  implement2.wit  implement2.wit.err  implement3.wit  implement3.wit.err  implement4.wit  implement4.wit.err  implement5.wit  implement5.wit.err  not-interface2.wit  not-interface2.wit.err  types-invalid.wit  types-invalid.wit.err  types-wrong-order.wit  types-wrong-order.wit.err  unresolved1.wit  unresolved1.wit.err  unresolved2.wit  unresolved2.wit.err  unresolved3.wit  unresolved3.wit.err  unresolved4.wit  unresolved4.wit.err
crates/text/tests/parse-pass/: export.wit.ok  func.wit.ok  implement.wit  implement.wit.ok  imports.wit  imports.wit.ok  types.wit  types.wit.ok
crates/validator/: Cargo.toml  README.md
crates/validator/src/: lib.rs
crates/walrus/: Cargo.toml  README.md
crates/walrus/src/: exports.rs  funcs.rs  implements.rs  imports.rs  lib.rs  types.rs
crates/wit/: Cargo.toml
crates/wit/src/: lib.rs
crates/wit/src/ast/: external.rs  func.rs  instr.rs  mod.rs  module.rs  ty.rs
crates/wit/tests/: parse-fail.rs
crates/wit/tests/parse-fail/: not-interface.wit.err
crates/wit2wasm/: Cargo.toml
crates/writer/: Cargo.toml  README.md
crates/writer/src/: lib.rs
src/: lib.rs
tests/: anyref.wat  bad-export.wit  bad-export2.wit  bad-implement.wat  bad-implement.wit  bad-implement2.wit  bad-implement3.wit  bad-implement4.wat  bad-implement4.wit  bad-implement5.wat  bad-implement5.wit  bad-implement6.wit  bad-implement7.wast  bad-implement7.wit  bad-memory-to-string.wast  bad-memory-to-string.wat  bad-memory-to-string.wit  bad-memory-to-string2.wit  bad-memory-to-string3.wast  bad-memory-to-string4.wit  bad-memory-to-string5.wast  bad-schema.wat  bad-section.wat  bad-string-to-memory.wat  call.wit  convert.wat  defer-call.wit  empty.wit  export.wast  export.wit  func-bad-ty.wat  func-bad-ty.wit  func.wast  func.wit  i32-vs-s32.wit  implement.wast  implement.wit  implement.wit.out  implement1.wast  implement1.wat  (+71 more)
