[package]
name = "wit-parser"
version = "0.2.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/wasm-interface-types"
readme = "README.md"
description = """
Parser for the WebAssembly Interface Types binary format
"""

[dependencies]
anyhow = "1.0"
leb128 = "0.2"
wit-schema-version = { path = "../schema-version", version = "0.1.0" }
