[package]
name = "wit-text"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
wast = "3.0.4"
wit-writer = { path = "../writer" }

[dev-dependencies]
getopts = "0.2"
test-helpers = { path = "../test-helpers" }
walrus = "0.13.0"
wasmparser = "0.42"
wat = "1.0"
wit-parser = { path = "../parser" }
wit-printer = { path = "../printer" }
wit-validator = { path = "../validator" }
wit-walrus = { path = "../walrus" }

[[test]]
name = "all"
harness = false
