[package]
name = "wit-validator"
version = "0.2.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/wasm-interface-types"
readme = "README.md"
description = """
Validator for the WebAssembly Interface Types binary format.
"""

[dependencies]
anyhow = "1.0"
wasmparser = "0.59"
wit-parser = { path = "../parser", version = "0.2.0" }
wit-schema-version = { path = "../schema-version", version = "0.1.0" }
