[package]
name = "wit-walrus"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
id-arena = "2"
walrus = "0.13"
wit-parser = { path = "../parser" }
wit-schema-version = { path = "../schema-version" }
wit-writer = { path = "../writer" }
