[package]
name = "wit-writer"
version = "0.2.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/wasm-interface-types"
readme = "README.md"
description = """
Binary encoder for the WebAssembly Interface Types format
"""

[dependencies]
leb128 = "0.2"
wit-schema-version = { path = "../schema-version", version = "0.1.0" }
